# CppPrimer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppPrimer.sln  CppPrimer.vcxproj  CppPrimer.vcxproj.filters  PrimerExercises_1_10.cpp  PrimerExercises_1_10.h  PrimerExercises_1_13_1.h  PrimerExercises_1_13_2.h  PrimerExercises_1_19.cpp  PrimerExercises_1_20.cpp  PrimerExercises_1_20.h  PrimerExercises_1_21.h  PrimerExercises_1_22.h  PrimerExercises_1_3.cpp  PrimerExercises_1_5.cpp  PrimerExercises_1_9.h  PrimerExercises_2_18.cpp  PrimerExercises_2_18.h  PrimerExercises_2_3.h  PrimerExercises_2_34.cpp  PrimerExercises_2_34.h  PrimerExercises_2_35.cpp  PrimerExercises_2_36.cpp  PrimerExercises_2_36.h  PrimerExercises_2_37.cpp  PrimerExercises_3_17.h  PrimerExercises_3_2.cpp  PrimerExercises_3_20.cpp  PrimerExercises_3_21.h  PrimerExercises_3_22.cpp  PrimerExercises_3_24.cpp  PrimerExercises_3_24.h  PrimerExercises_3_25.h  PrimerExercises_3_31.h  PrimerExercises_3_35.cpp  PrimerExercises_3_39.h  PrimerExercises_3_4.cpp  PrimerExercises_3_4.h  (+28 more)
exercises/: exercises_test.cpp  exercises_test.h
exercises/01/: PrimerExercises_1_11.cpp  PrimerExercises_1_11.h  PrimerExercises_1_13_1.cpp  PrimerExercises_1_13_2.cpp  PrimerExercises_1_13_3.cpp  PrimerExercises_1_13_3.h  PrimerExercises_1_16.cpp  PrimerExercises_1_16.h  PrimerExercises_1_18.cpp  PrimerExercises_1_18.h  PrimerExercises_1_19.h  PrimerExercises_1_21.cpp  PrimerExercises_1_22.cpp  PrimerExercises_1_23.cpp  PrimerExercises_1_23.h  PrimerExercises_1_3.h  PrimerExercises_1_4.cpp  PrimerExercises_1_4.h  PrimerExercises_1_5.h  PrimerExercises_1_9.cpp
exercises/02/: PrimerExercises_2_3.cpp  PrimerExercises_2_35.h  PrimerExercises_2_37.h
primer/: primer_test.cpp  primer_test.h
tools/: UtilMod.h
(+59 files in other folders)
